# directoris

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  nest-cli.json  package-lock.json  package.json  prisma.config.ts  tsconfig.build.json
agno/: .env.example  README.md  pyproject.toml  requirements.txt
agno/src/: __init__.py  llm.py  main.py  models.py
agno/src/agents/: __init__.py  character.py  continuity.py  storyboard.py  structure.py
agno/src/tools/: __init__.py  directoris.py
prisma/: schema.prisma
prisma/migrations/20251201001738_init/: migration.sql
prisma/migrations/20251201003709_characters_os_depth/: migration.sql
src/: app.module.ts  main.ts
src/agents/: agents.controller.ts  agents.module.ts  agents.service.ts
src/agents/dto/: agentos-contracts.dto.ts  index.ts  run-agents.dto.ts
src/auth/: auth.controller.ts  auth.service.ts
src/canon/: canon.module.ts
src/canon/characters/: characters.controller.ts  characters.service.ts
src/canon/locations/: locations.controller.ts  locations.service.ts
src/canon/rules/: rules.controller.ts  rules.service.ts
src/common/dto/: pagination.dto.ts
src/common/guards/: auth.guard.ts
src/config/: config.module.ts  configuration.ts
src/internal/: internal-api-key.guard.ts  internal.controller.ts  internal.service.ts
src/prisma/: prisma.service.ts
src/projects/: projects.controller.ts  projects.service.ts
src/projects/dto/: add-member.dto.ts  (+1 more)
src/story/: story.module.ts
src/users/: users.controller.ts  users.service.ts
web/: package-lock.json  package.json
(+69 files in other folders)
